[project]
name = "userlab"
version = "0.1.0"
description = "User management teaching platform"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "streamlit>=1.47.1",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools]
py-modules = ["app", "auth", "config", "database", "frontend", "models"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

